# dashscope-api-shim

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-dev.txt  requirements.txt
dashscope_api_shim/: __init__.py  main.py
dashscope_api_shim/api/: __init__.py  chat.py  models.py
dashscope_api_shim/core/: __init__.py  bailian_translator.py  config.py
dashscope_api_shim/models/: __init__.py  openai.py
dashscope_api_shim/utils/: __init__.py  logger.py
tests/: __init__.py  test_api.py  test_translator.py
